# File: HISTORY.txt
#
26-Jan-2021 - V0.10 Preliminary version
27-Jan-2021 - V0.11 Update linux configuration and add exclusion filters in ChemCompModelGen()
27-Jan-2021 - V0.12 Python path adjustments in ChemCompModelExec()
27-Jan-2021 - V0.13 Make an index of the search files and avoid a file system glob search.
31-Jan-2021 - V0.14 Create models for protomeric matches with unmapped protons, multiprocess model build workflow
 1-Feb-2021 - V0.15 Add assemble workflow and model relabeling to permit sequential public model identifiers.
 2-Feb-2021 - V0.16 Adjust mismatch reporting during build workflow, update dependencies, add assemble check method
 2-Feb-2021 - V0.17 Add working path to OeAlignUtils(), adjust check method, keep heavy atom only structures
 3-Feb-2021 - V0.18 Simplify the build alignment criteria, add cli criteria option, and improve the handling of aromatic bond matching
 5-Feb-2021 - V0.19 Make assemble respect prior modelId assignments.
 5-Feb-2021 - V0.20 Add assemble workflow to cli in ChemCompModelExec()
 6-Feb-2021 - V0.21 Fix accession and audit reconciliation with prior model collections